h2. Changelog

h3. Versión 2.1RC10

* Fixed Bug en Verificación.
* Fixed Bug en Conceptos Economicos.

h3. Versión 2.1RC9

* Fixed Bug en Verificación.
* Fixed Bug en Presentación de Persona Jurídica.
* Añadida columna totales por Concepto Económico.

h3. Versión 2.1RC8

* Fixed Some Bug en Verificación.
* Fixed Bug en retrocompatibilidad con el elemento Dirección anterior a la versión 2.1.
* Fixed Minor Bug en template.html.
* Minor Fixed Bug.

h3. Versión 2.1RC7

* Fixed bugs en Verificaciones posteriores.
* Fixed bugs en combos no Editables tras error de validación.
* Mensaje de error en los elementos de tipo moneda se obtiene de "fap.mensaje.error.moneda".
* Escala de job de anotaciones ahora en horas.
* Informe de seguimiento en nueva pestaña.
* Añadidos iconos en la pantalla de login.
* Añadido icono de Euro a los tipo Moneda.
* Fixed bugs en Presentación, PersonaFisica,...
* Fixed some minimal bugs.

h3. Versión 2.1RC6

* Fixed Bug en el cálculo de los conceptos económicos.
* Nuevo elemento CCC, para representar una Cuenta Corriente Cliente.
* Fixed Bug en ConfigurarMensajes.
* Redefiniendo las columnas de la tablas DocumentacionFAP.
* Fixed Bug en Documentación Externa.
* No se envían ahora los campos ocultos por grupos.
* Minor Fixed Bug.

h3. Versión 2.1RC5

* Mejorada la página de conceptos económicos.
* En los conceptos económicos ahora son de tipo Moneda.
* Añadida la cadena "RE" cuando se registra en Platino.
* Fixed bug baremación.
* Fixed bug al mostrar solicitudes sin estado.
* Añadido el método formatMoneda() que es que se utilizará para los elementos tipo Moneda.
* Se permite coloreado de tablas.
* Se permite incluir ejemplos de código.
* Se permite generar el javadoc del módulo desde una aplicación.
* Fixed minimal bugs.

h3. Versión 2.1RC4

* Bootstrap adaptativo.
* Se permite añadir check a las tablas de popups.
* Se permite que los PopUp abarquen toda la pantalla (atributo maximizar).