@@ -4,6 +4,7 @@ h3. Versión 2.1RC10
 
 * Fixed Bug en Verificación.
 * Fixed Bug en Conceptos Economicos.
+* Fixed Bug en BuscarLogs sobre distribuciones FAP (dist).
 
 h3. Versión 2.1RC9
 
